--- a/BR-MS/login.html
+++ b/BR-MS/login.html
@@ -137,7 +137,7 @@
 <script src="lib/eleme-index.js"></script>
 <script src="res/dependencies.js"></script>
 <script>
-    var urlPrefix='http://10.112.128.128:8080/dispatch';
+    var urlPrefix='http://10.112.128.63:8080/dispatch';
     const $=require('jquery');
     var app = new Vue({
         el: '#app',
@@ -199,8 +199,8 @@
                             complete: function () {
                                 console.log('Done');
                             },
-                            error: () => {
-                                console.log();
+                            error: (XMLHttpRequest, textStatus, errorThrown) => {
+                                console.log(XMLHttpRequest,textStatus,errorThrown);
                                 this.$alert('登录失败');
                                 this.isLogging=false;
                             }
